--- a/trade/css/responsive.css
+++ b/trade/css/responsive.css
@@ -33,6 +33,10 @@
 		padding-bottom: 50px;
 
 	}
+
+	.midBanner img{
+		width: 100% !important;
+	}
 }
 
 @media (min-width: 1199px) and (max-width: 1400px) {
